--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,25 +1,35 @@
-main{
+main {
   min-height: 80vh;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1 {
+  font-size: 1.8 rem;
+  padding: 1rem 0;
+}
+
+h2 {
+  font-size: 1.4 rem;
+  padding: 0.5rem 0;
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.rating span{
+.rating span {
   margin: 0.1rem;
 }
 
-h3{
+h3 {
   padding: 1rem 0;
 }
